[gd_scene load_steps=3 format=3 uid="uid://4tmt3p07ikni"]

[ext_resource type="Script" uid="uid://64sehjuv4c6a" path="res://scripts/HexTile.gd" id="1_ha4sb"]
[ext_resource type="Texture2D" uid="uid://dso4ilvpf1xbc" path="res://assets/tiles/hex_basic.png" id="1_k1oo0"]

[node name="HexTile" type="Area2D"]
script = ExtResource("1_ha4sb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_k1oo0")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(15, 27, 28, 0, 15, -27, -15, -27, -28, 0, -15, 27)

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
